--- a/gb/18/3/23/n10242055.md
+++ b/gb/18/3/23/n10242055.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rgxx210/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rgxx210/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rgxx210/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rgxx210/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rgxx210/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rgxx210/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rgxx210/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>黄信尧操刀台北电影节广告 魏德圣入镜相挺</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/03/1803222327081487-600x400.jpg" />
 <h6>第20届台北电影节由导演黄信尧（右）掌镜，魏德圣（左）入镜相挺。（台北电影节提供）
 </h6>
 <hr>
-	<p>【大纪元2018年03月23日讯】2018第20届台北电影节将于6月28日至7月14日展开，22日公布形象广告导演与演员，邀请曾以两度获得台北电影奖百万首奖的导演<ahref="https://github.com/rgxx210/djy/blob/master/gb/tag/%E9%BB%84%E4%BF%A1%E5%B0%A7.md#1">黄信尧</a>操刀，与庄益增与陈竹升两位《大佛普拉斯》班底回锅参演，还有导演<ahref="https://github.com/rgxx210/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>也愿意入镜相挺。</p>
-<figure id="attachment_10242176" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/03/1803222327171487.jpg"><img class="size-large wp-image-10242176" title="" src="https://i.epochtimes.com/assets/uploads/2018/03/1803222327171487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">出演《大佛普拉斯》班底陈竹升（左）与庄益增（右）也参演第20届台北电影节形象广告。（台北电影节提供）</figcaption></figure>
-<p>22日下午，台北电影节形象广告在台湾艺术大学电影院开镜，拍摄影厅里的场景，导演<ahref="https://github.com/rgxx210/djy/blob/master/gb/tag/%E9%BB%84%E4%BF%A1%E5%B0%A7.md#1">黄信尧</a>表示这次广告，希望透过轻松活泼的口吻，拍摄一部能够跟观众对话的影片，同时带领观众回顾台北电影节及台湾电影20年来几部经典之作。</p>
+	<p>【大纪元2018年03月23日讯】2018第20届台北电影节将于6月28日至7月14日展开，22日公布形象广告导演与演员，邀请曾以两度获得台北电影奖百万首奖的导演<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BB%84%E4%BF%A1%E5%B0%A7.md#1">黄信尧</a>操刀，与庄益增与陈竹升两位《大佛普拉斯》班底回锅参演，还有导演<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>也愿意入镜相挺。</p>
+<figure id="attachment_10242176" aria-describedby="caption-attachment-10242176" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/1803222327171487.jpg"><img class="size-large wp-image-10242176" title="" src="https://i.epochtimes.com/assets/uploads/2018/03/1803222327171487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10242176" class="wp-caption-text">出演《大佛普拉斯》班底陈竹升（左）与庄益增（右）也参演第20届台北电影节形象广告。（台北电影节提供）</figcaption></figure>
+<p>22日下午，台北电影节形象广告在台湾艺术大学电影院开镜，拍摄影厅里的场景，导演<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BB%84%E4%BF%A1%E5%B0%A7.md#1">黄信尧</a>表示这次广告，希望透过轻松活泼的口吻，拍摄一部能够跟观众对话的影片，同时带领观众回顾台北电影节及台湾电影20年来几部经典之作。</p>
 <p>出演《大佛普拉斯》的班底陈竹升，对于能够拍摄台北电影节20周年的形象广告、参与故乡影展的“成年礼”感到相当荣幸，对于再度与老搭档庄益增合作，他坦言格外兴奋，但知道这支形象广告将于影展期间每部电影放映之前播放，便自嘲“在看电影前看到我们好吗？”</p>
-<p>除了老班底陈竹升与庄益增回归，黄信尧也邀请<ahref="https://github.com/rgxx210/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>导演入镜，除了看中他跟台北电影节的连结、台湾电影史上卖座冠军《海角七号》的观众熟悉度，更想要打造他成为另类的电影大使。</p>
-<figure id="attachment_10242189" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/03/1803222327201487.jpg"><img class="size-large wp-image-10242189" title="" src="https://i.epochtimes.com/assets/uploads/2018/03/1803222327201487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">第20届台北电影节由导演黄信尧掌镜，魏德圣（左）入镜相挺。（台北电影节提供）</figcaption></figure>
+<p>除了老班底陈竹升与庄益增回归，黄信尧也邀请<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>导演入镜，除了看中他跟台北电影节的连结、台湾电影史上卖座冠军《海角七号》的观众熟悉度，更想要打造他成为另类的电影大使。</p>
+<figure id="attachment_10242189" aria-describedby="caption-attachment-10242189" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/1803222327201487.jpg"><img class="size-large wp-image-10242189" title="" src="https://i.epochtimes.com/assets/uploads/2018/03/1803222327201487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10242189" class="wp-caption-text">第20届台北电影节由导演黄信尧掌镜，魏德圣（左）入镜相挺。（台北电影节提供）</figcaption></figure>
 <p>而魏德圣导演表示在接到台北电影节总监沈可尚的电话后，二话不说地跨刀相助，还谦称自己不会演戏，要跟很会表演的陈竹升与庄益增同台，反而非常紧张，肯定笑不出来。谈及目前制作的《台湾三部曲》”，魏导坦言难度很高，需要一关一关解决。</p>
 <p>此外，顶着一头显眼白发的资深影评人李幼鹦鹉鹌鹑，曾获颁第13届台北电影奖卓越贡献奖，这次也以一个影迷的角色入镜。除了惊喜与受宠若惊，他还强调“简直会让我不朽！”</p>
 <p>导演黄信尧更透露，本次形象广告还有几位彩蛋演员，直到正片完成后才会跟观众见面。</p>
@@ -22,36 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/17/1/2/n8658164.md#1">魏德圣新作高雄特映 魏导：越南部热情越大！</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/17/1/5/n8667321.md#1">贺岁档竞争激烈 魏德圣坦言紧张</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/17/1/13/n8698044.md#1">《乐来乐爱你》横扫金球 魏德圣挥毫祈票房</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/17/2/1/n8766490.md#1">魏德圣年初五开工 率新片主演上街谢票</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/2/n8658164.md#1">魏德圣新作高雄特映 魏导：越南部热情越大！</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/5/n8667321.md#1">贺岁档竞争激烈 魏德圣坦言紧张</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/13/n8698044.md#1">《乐来乐爱你》横扫金球 魏德圣挥毫祈票房</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/1/n8766490.md#1">魏德圣年初五开工 率新片主演上街谢票</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/rgxx210/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11133337.md#1" target="_blank">林辉：质疑文革 红卫兵头目被摘肾暴尸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/23/n12131818.md#1">【直播回放】5.24港人反国安恶法游行</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/23/n12131493.md#1">中共阻美航空公司复飞中国 美方回击</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/3/n12078838.md#1">经济学家：美有一招 会令中共笑不出来</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/23/n12130666.md#1">【十字路口】港国安法8点解读 美中决战香港？</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/24/n12132387.md#1">【更新】反国安法游行 逾百人被捕1女危殆</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/22/n12129870.md#1">中共祭港版国安法 网络疯传港片《表姐》台词</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/22/n12130142.md#1">周迅惊爆离婚？高圣远IG删光甜蜜合照</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/22/n12130294.md#1">罗志祥发长文跟周扬青道歉 被质疑想“复工”</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/22/n12128809.md#1">甄子丹与各国功夫好手隔空对打 结局很妙</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/24/n12133574.md#1">无惧遭清算 何韵诗：未来不会离开香港</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/2/25/n11894182.md#1">【命理】为什么有些人一生都不能发财？</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/21/n12127126.md#1">伤心华盛顿堡</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/24/n12133047.md#1">【纪元播报】历史上瘟疫：神农尝百草的秘密</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/4/12/n12025000.md#1">【馨香雅句】德音雅乐 听乐以治心</a></li>
-<li><a href="https://github.com/rgxx210/djy/blob/master/gb/20/5/20/n12122547.md#1">【传奇时代】获瑞典国王奖的成功之道</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rgxx210/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rgxx210/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/23/n10242055.htm">黄信尧操刀台北电影节广告 魏德圣入镜相挺</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/23/n10242055.htm">黄信尧操刀台北电影节广告 魏德圣入镜相挺</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rgxx210/djy/blob/master/gb/18/3/23/n10242055.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rgxx210/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rgxx210/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rgxx210/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rgxx210/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgxx210/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/3/23/n10242055.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
